<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/explorerFragment"
        android:icon="@drawable/ic_point"
        android:title="@string/explorer"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />
</menu>